fix bug import wrong font awesome

--- a/client/src/assets/css/DashBoard.css
+++ b/client/src/assets/css/DashBoard.css
@@ -1,7 +1,7 @@
 .dashboard {
   padding-top: 40px;
   background-color: #e6ecf0;
-  height: 100vh;
+  height: 100%;
 }
 
 .aside-dashboard {
