--- a/client/src/assets/css/Nav.css
+++ b/client/src/assets/css/Nav.css
@@ -5,7 +5,7 @@ nav {
   border-bottom: 1px solid #e9ecef;
 }
 
-a svg {
+a i {
   color: #1496ed;
   margin-right: 5px;
 }
